exercicis/pt1-4-ex1/main.tf
provider "aws" {
region = "us-east-1"
}


resource "aws_vpc" "main" {
cidr_block = "10.0.0.0/16"
tags = {
Name = "VPC-03"
}
}


resource "aws_subnet" "public_a" {
vpc_id = aws_vpc.main.id
cidr_block = "10.0.1.0/24"
availability_zone = "us-east-1a"
map_public_ip_on_launch = true
tags = {
Name = "Public-Subnet-A"
}
}

resource "aws_subnet" "public_b" {
vpc_id = aws_vpc.main.id
cidr_block = "10.0.2.0/24"
availability_zone = "us-east-1b"
map_public_ip_on_launch = true
tags = {
Name = "Public-Subnet-B"
}
}


resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main.id
tags = {
Name = "gw-VPC-03"
}
}


resource "aws_route_table" "public_rt" {
vpc_id = aws_vpc.main.id
route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.igw.id
}
tags = {
Name = "Public-Route-Table"
}
}

resource "aws_route_table_association" "a" {
subnet_id = aws_subnet.public_a.id
route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "b" {
subnet_id = aws_subnet.public_b.id
route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "public_sg" {
name = "public-sg"
description = "Permet SSH, ICMP intern i tot el transit sortint"
vpc_id = aws_vpc.main.id

ingress {
description = "SSH from anywhere"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
description = "ICMP from inside VPC"
from_port = -1
to_port = -1
protocol = "icmp"
cidr_blocks = [aws_vpc.main.cidr_block]
}

egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "Public-SG"
}
}

resource "aws_instance" "ec2_a" {
ami = "ami-07860a2d7eb515d9a"
instance_type = "t3.micro"
subnet_id = aws_subnet.public_a.id
key_name = "vockey"
vpc_security_group_ids = [aws_security_group.public_sg.id]

tags = {
Name = "ec2-a"
}
}

resource "aws_instance" "ec2_b" {
ami = "ami-07860a2d7eb515d9a"
instance_type = "t3.micro"
subnet_id = aws_subnet.public_b.id
key_name = "vockey"
vpc_security_group_ids = [aws_security_group.public_sg.id]

tags = {
Name = "ec2-b"
}
}
